...
            .fillMaxWidth()
            .padding(vertical = 16.dp)
            .testTag("order_section_test")
    ) {
        Row(modifier = Modifier.fillMaxWidth()) {
            DefaultRadioButton(
                text = "Title",
                selected = noteOrder is NoteOrder.Title
            ) {
                onOrderChange(NoteOrder.Title(noteOrder.order))
            }
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
...
                selected = noteOrder.order is OrderType.Ascending
            ) {
                onOrderChange(noteOrder.copy(OrderType.Ascending))
            }
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Descending",
                selected = noteOrder.order is OrderType.Descending
            ) {
                onOrderChange(noteOrder.copy(OrderType.Descending))
            }
        }
    }
...
