...
                    navController.navigate(Screen.AddEditNoteScreen.route)
                },
                backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "add"
                )
            }
        },
        scaffoldState = scaffoldState
    ) {
        Column(
...
                    onClick = {
                        viewmodel.onEvent(NotesEvent.ToggleOrderSection)
                    }
                ) {
                    Icon(
                        imageVector = Icons.Default.Sort,
                        contentDescription = "sort"
                    )
                }
            }

            AnimatedVisibility(
                visible = state.isOrderSectionVisible,
...
