...
    onClick: () -> Unit,
    onDeleteClick: () -> Unit
) {
    Box(modifier = Modifier
        .fillMaxWidth()
        .clickable { onClick() }
        .testTag("note_card")
    ) {
        Canvas(modifier = Modifier.matchParentSize()) {
            val clipPath = Path().apply {
                lineTo(size.width - cutCornerSize.toPx(), 0f)
                lineTo(size.width, cutCornerSize.toPx())
                lineTo(size.width, size.height)
...
